<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp">



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/relative_layout__background"
        android:id="@+id/view_background"
        >

        <ImageView
            android:contentDescription="@string/delete"
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/ic_menu_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="14sp" />

    </RelativeLayout>



    <android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="16dp"
        android:id="@+id/crypto_card_foreground"
        android:padding="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/cardview_background"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <TextView
                android:padding="4dp"
                android:textAlignment="center"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ngr"

                android:textStyle="italic|bold"
                android:layout_margin="4dp"
                android:textSize="40sp"
                android:id="@+id/crypto_cardView_currency"
                android:textColor="@color/cardview_main_text"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="8dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/icons8_bitcoin"
                        android:contentDescription="@string/bitcoin"/>


                    <TextView


                        android:textColor="@color/bitcoin_text"
                        android:id="@+id/crypto_card_bitcoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:focusable="true"

                        android:textStyle="bold|italic"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/card_placeholder"
                        android:textSize="22sp"
                        />




                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/icons8_ethereum"
                        android:contentDescription="@string/ethereum"/>

                    <TextView
                        android:textColor="@color/ethereum_text"
                        android:id="@+id/crypto_card_ethereum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"

                        android:focusable="true"
                        android:textStyle="bold|italic"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/card_placeholder"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>






        </LinearLayout>

    </android.support.v7.widget.CardView>



</FrameLayout>





